# research-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  check_key.py  check_models_genai.py  debug_genai.py  final_report.md  haikutest.py  list_models.py  main.py  model_test_results.txt  pyproject.toml  requirements.txt  test_deep_scout.py
runs/20260125_171640_global_geopolitical_realignment_as_great_power_con/: metadata.json  report.md
runs/20260125_172140_australian_geopolitical_realignment_as_great_power/: final_report.md  metadata.json
runs/20260125_172601_advances_in_sodium_batteries_and_manufacturing_at/: final_report.md  metadata.json
runs/20260126_192056_rise_in_right_wing_populist_and_authoritarian_poli/: metadata.json
src/researcher/: __init__.py  analyst.py  deep_scout.py  models.py  orchestrator.py  scout.py  synthesizer.py  utils.py
